--- a/Scripts/2.0_GLUCOSE.Rmd
+++ b/Scripts/2.0_GLUCOSE.Rmd
@@ -29,6 +29,8 @@ Glucose$Meter <- as.factor(Glucose$Meter)
 hist(Glucose$Glucose)
 #Very high reading confirmed to be correct
 
+Glucose %>% dplyr::count(Origin)
+
 
 
 glucose_f1 <- ggplot(Glucose, aes(x=Group, y=Glucose, fill = Group)) + 
@@ -43,6 +45,8 @@ Repeatability_Glucose <- rpt(Glucose ~ Meter + Sex + Group + (1 | Fish_ID), grna
 
 Repeatability_Glucose
 
+
+
 Mixed_Model_Glucose <- lmer(Glucose ~ Group + Sex + Weight + (1|Fish_ID), data=Glucose)
 summary(Mixed_Model_Glucose)
 tab_model(Mixed_Model_Glucose)
@@ -50,9 +54,10 @@ hist(residuals(Mixed_Model_Glucose)) #Transform ?
 
 
 # Calculating difference in variance between control and treatment group 
-Model_Glucose_1 <- lme(Glucose ~ Group + Sex, random = ~ 1| Fish_ID, data = Glucose, na.action = na.omit) #Mixed model without variance structure
+Model_Glucose_1 <- lme(Glucose ~ Group*Sex, random = ~ 1| Fish_ID, data = Glucose, na.action = na.omit) #Mixed model without variance structure
 summary(Model_Glucose_1)
-Model_Glucose_2 <- lme(Glucose ~ Group + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Group), data = Glucose, na.action = na.omit) #mixed model with variance structure varIdent
+tab_model(Model_Glucose_1)
+Model_Glucose_2 <- lme(Glucose ~ Group*Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Group), data = Glucose, na.action = na.omit) #mixed model with variance structure varIdent
 summary(Model_Glucose_2)
 anova(Model_Glucose_1, Model_Glucose_2)
 
